# tree-sitter-sln

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  build.zig  build.zig.zon  go.mod  grammar.js  package-lock.json  package.json  pnpm-lock.yaml  pom.xml  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yml  publish.yml  release.yml
bindings/c/: tree-sitter-sln.pc.in
bindings/go/: binding.go  binding_test.go
bindings/java/main/io/github/treesitter/jtreesitter/sln/: TreeSitterSln.java
bindings/java/test/: TreeSitterSlnTest.java
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_sln/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterSln/: sln.h
bindings/swift/TreeSitterSlnTests/: TreeSitterSlnTests.swift
bindings/zig/: root.zig  test.zig
queries/: folds.scm  highlights.scm  tags.scm  textobjects.scm
src/: grammar.json  node-types.json  parser.c
