[package]
name = "tree-sitter-sln"
description = "A tree-sitter grammar for Visual Studio Solution (.sln) files"
version = "0.2.0"
authors = ["Crysthamus <crysthamus@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "sln"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/crysthamus/tree-sitter-sln"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26.9"
